syntax = "proto3";

package greet;

option go_package = "greetpb";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greet = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  rpc GetGreeting(stream GreetRequest) returns (stream GreetResponse) {};
}